--- a/learn-ioc/pom.xml
+++ b/learn-ioc/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>java-beans-ioc</module>
+        <module>ioc-container-overview</module>
     </modules>
     <dependencies>
         
