--- a/learn-ioc/ioc-dependency-lookup/pom.xml
+++ b/learn-ioc/ioc-dependency-lookup/pom.xml
@@ -2,21 +2,25 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>learn-ioc</artifactId>
         <groupId>com.fantasybaby</groupId>
-        <artifactId>thinking-in-spring</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>learn-ioc</artifactId>
-    <name>learn-ioc</name>
-    <packaging>pom</packaging>
-    <modules>
-        <module>java-beans-ioc</module>
-        <module>ioc-container-overview</module>
-        <module>ioc-dependency-lookup</module>
-    </modules>
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>ioc-dependency-lookup</artifactId>
+
+    <name>ioc-dependency-lookup</name>
+
+
     <dependencies>
-        
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>ioc-container-overview</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
+
 </project>
