add lazy loader

--- a/learn-ioc/ioc-dependency-lookup/pom.xml
+++ b/learn-ioc/ioc-dependency-lookup/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>ioc-container-overview</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>spring-beans-overview</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
